@@ -3,6 +3,7 @@
 ## 0.6.1 (unreleased)
 
 * updated pydantic dependency to v2
+* better tests and docstrings
 
 ## 0.6.0 (2025-06-19)
 
